--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "alphasec",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2"
-  },
+    "nodemailer": "^6.9.0",
+    "webuntis": "^1.0.0",
+    "dotenv": "^16.0.0"
+},
   "scripts": {
     "start": "node app.js"
   }
